istio/virtualservice-external.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-services
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway                      
  http:
  - match:
    - uri:
        exact: /call
    - uri:
        exact: /welcome
    - uri:
        exact: /goodbye
    route:
    - destination:
        host: servicea-service.microservices.svc.cluster.local         
        port:
          number: 8080
